as much state removed from converters as possible (locale) So that they can be used as singletons
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk/wicket@456292 13f79535-47bb-0310-9956-ffa450edef68